# hapfusion

./: .cookiecutter.json  .pre-commit-config.yaml  LICENSE.rst  README.md  files.txt  noxfile.py  pyproject.toml  setup.py
.github/workflows/: constraints.txt  labeler.yml  release.yml  tests.yml
scripts/: bam2fasta.py  bam2fastq.py  bam2methylC.py  get_mmr_candidates.py  get_mmr_molecules.py  get_phased_prdm9_sequences.py  hapsum.py
src/hapfusion/: __init__.py  __main__.py  bamlib.py  caller.py  gtlib.py  haplib.py  imglib.py  parse_args.py  util.py  vcflib.py
src/hapmash/: __main__.py  caller.py  haplib.py  imglib.py  parse_args.py
src/hapmix/: __init__.py  __main__.py  bamlib.py  caller.py  cslib.py  haplib.py  parse_args.py  phaselib.py  util.py  vcflib.py
src/hapsmash/: __init__.py  __main__.py  caller.py  cslib.py  haplib.py  imglib.py  parse_args.py  phaselib.py  util.py  vcflib.py
tests/: __init__.py  test_main.py
