[tool.poetry]
name = "hapsmash"
version = "0.0.1"
description = "Hapsmash"
authors = ["Sangjin Lee <sl17@sanger.ac.uk>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/sjin09/hapsmash"
repository = "https://github.com/sjin09/hapsmash"
documentation = "https://hapsmash.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/sjin09/hapsmash/releases"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
argparse = "^1.4.0"
natsort = "^8.0.2"
numpy = {version = "^1.22.1", python = ">=3.8,<4.0.0"}
scipy = "^1.7.3"
svglib = "^1.4.1"
svgwrite = "^1.4.3"
pysam = "^0.19.1"
pytabix = "^0.1"
cyvcf2 = "^0.30.16"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
coverage = {extras = ["toml"], version = "^5.3"}
safety = "^1.9.0"
mypy = "^0.790"
typeguard = "^2.9.1"
xdoctest = {extras = ["colors"], version = "^0.15.0"}
sphinx = "^3.3.1"
sphinx-autobuild = "^2020.9.1"
pre-commit = "^2.8.2"
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"
pep8-naming = "^0.11.1"
darglint = "^1.5.8"
reorder-python-imports = "^2.3.6"
pre-commit-hooks = "^3.3.0"
sphinx-rtd-theme = "^0.5.0"
sphinx-click = "^2.5.0"
Pygments = "^2.7.2"

[tool.poetry.scripts]
hapsmash = "hapsmash.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hapsmash"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
